[package]
name = "leptos_router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos_core = { path = "../leptos_core" }
leptos_dom = { path = "../leptos_dom"}
leptos_macro = { path = "../leptos_macro"}
leptos_reactive = { path = "../leptos_reactive"}
serde = "1"