[package]
name = "leptos_router"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos_core = { path = "../leptos_core" }
leptos_dom = { path = "../leptos_dom"}
leptos_macro = { path = "../leptos_macro"}
leptos_reactive = { path = "../leptos_reactive"}
common_macros = "0.1"
lazy_static = "1"
linear-map = "1"
log = "0.4"
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
url = { version = "2", optional = true }
urlencoding = "2"
thiserror = "1"
js-sys = { version = "0.3", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
	"History",
	"HtmlAnchorElement",
	"MouseEvent",
	"Url"
]

[features]
default = ["dep:url", "dep:regex"]
browser = ["dep:js-sys"]
