[package]
name = "leptos_meta"
version = "0.7.7"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "Tools to set HTML metadata in the Leptos web framework."
rust-version.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
once_cell = "1.20"
or_poisoned = { workspace = true }
indexmap = "2.6"
send_wrapper = "0.6.0"
tracing = { version = "0.1.41", optional = true }
wasm-bindgen = { workspace = true }
futures = "0.3.31"

[dependencies.web-sys]
version = "0.3.72"
features = ["HtmlLinkElement", "HtmlMetaElement", "HtmlTitleElement"]

[features]
default = []
ssr = []
tracing = ["dep:tracing"]
nonce = ["leptos/nonce"]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.cargo-all-features]
denylist = ["tracing"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(leptos_debuginfo)'] }
