[package]
name = "leptos_meta"
version = "0.8.5"
authors = ["Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "Tools to set HTML metadata in the Leptos web framework."
rust-version.workspace = true
edition.workspace = true

[dependencies]
leptos = { workspace = true }
or_poisoned = { workspace = true }
indexmap = { workspace = true, default-features = true }
send_wrapper = { workspace = true, default-features = true }
tracing = { optional = true, workspace = true, default-features = true }
wasm-bindgen = { workspace = true, default-features = true }
futures = { workspace = true, default-features = true }

[dependencies.web-sys]
features = ["HtmlLinkElement", "HtmlMetaElement", "HtmlTitleElement"]
workspace = true
default-features = true

[features]
default = []
ssr = []
tracing = ["dep:tracing"]
nonce = ["leptos/nonce"]

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.cargo-all-features]
denylist = ["tracing"]
max_combination_size = 2

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(leptos_debuginfo)'] }
