[package]
name = "oco_ref"
version = "0.2.0"
authors = ["Danik Vitek", "Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "A smart pointer for storing immutable values with relatively-cheap cloning. (Like a `Cow` meets an `Rc`!)"
rust-version.workspace = true
edition.workspace = true

[dependencies]
serde = "1.0"
thiserror = "2.0"

[dev-dependencies]
serde_json = { workspace = true }
