[package]
name = "oco_ref"
version = "0.2.1"
authors = ["Danik Vitek", "Greg Johnston"]
license = "MIT"
repository = "https://github.com/leptos-rs/leptos"
description = "A smart pointer for storing immutable values with relatively-cheap cloning. (Like a `Cow` meets an `Rc`!)"
rust-version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }

[dev-dependencies]
serde_json = { workspace = true, default-features = true }
