[package]
name = "reactive_graph"
edition = "2021"
version.workspace = true

[dependencies]
any_spawner = { workspace = true }
or_poisoned = { workspace = true }
futures = "0.3"
hydration_context = { workspace = true, optional = true } 
pin-project-lite = "0.2"
rustc-hash = "1.1.0"
serde = { version = "1", features = ["derive"], optional = true }
slotmap = "1"
thiserror = "1"
tracing = { version = "0.1", optional = true }
guardian = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros"] }
any_spawner = { workspace = true, features = ["tokio"] }

[features]
nightly = []
serde = ["dep:serde"]
tracing = ["dep:tracing"]
hydration = ["dep:hydration_context"]
sandboxed-arenas = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
